Add Django 5.2 support to tox configuration - Updated , ,  to include support for Django 5.2 - Added the environment for Django 5.2 with PostgreSQL and Redis

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py{38,39,310}-django4.1-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
     py{38,39,310,312}-django4.2-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
     py{310,311,312}-django5.0-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
+    py{310,311,312}-django5.2-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
     py{310,311,312}-djangomain-{sqlite3,postgresql,mysql}-{builtin_redis,redis,memcached,pylibmc,locmem,filebased},
 
 [testenv]
@@ -21,6 +22,7 @@ deps =
     django4.2: Django>=4.2,<4.3
     django5.0: Django>=5.0,<5.1
     django5.1: Django>=5.1,<5.2
+    django5.2: Django>=5.2,<5.3
     djangomain: https://github.com/django/django/archive/main.tar.gz
     psycopg2>=2.9.5,<3.0
     psycopg
@@ -63,4 +65,5 @@ DJANGO =
     4.2: django4.2
     5.0: django5.0
     5.1: django5.1
+    5.2: django5.2
     main: djangomain
